# deno-advent-calender-2025

./: README.md
docs/: _config.yml  index.html  style.css
docs/en/: architecture.html  index.html  usage.html
docs/ja/: architecture.html  index.html  usage.html
generator/: README.md
myapp/: .gitignore  CMakeLists.txt  build.config.ts  build.ts  cmake-file-api.ts  cmake-types.ts  deno.json  msi-installer.ts
myapp/src/: main.cpp
myapp/src/core/: core.cpp  core.h
myapp/src/utils/: utils.cpp  utils.h
